# autoflash

./: README.md  autoflash.py  iputils.py  pyproject.toml  setup.cfg
autoflash/: __init__.py  cli.py  dnsmasq.py  exceptions.py  iputils.py  misc.py  network.py  registry.py  serial.py  ssh.py  test_cli.py
autoflash/devices/: __init__.py
autoflash/devices/lantiq/: bt_homehub_v5a.py  netgear_dm200.py
autoflash/devices/mikrotik/: generic.py
autoflash/devices/realtek/: gs1900_8hp_v2.py
